sync workspace changes